--- a/csaw_function_CLEAN_qa_ET.Rmd
+++ b/csaw_function_CLEAN_qa_ET.Rmd
@@ -3605,7 +3605,7 @@ ggsave("peak_coverage_pie.pdf", p, width = 3, height = 3)
 ```
 
 ```{r, Processing Dataframes}
-#K27 Peaks regained in timecourse
+###K27 Peaks regained in timecourse
 early_recover = subset(H3K27me3_Results_K27peaks_vInput, (H3K27me3_Results_K27peaks_vInput$logFC_qa_4hr > 1 | H3K27me3_Results_K27peaks_vInput$logFC_qa_0hr > 1) & H3K27me3_Results_K27peaks_vInput$FDR_qa_4hr < 0.05)
 
 late_recover = H3K27me3_Results_K27peaks_vInput %>%
@@ -3681,6 +3681,62 @@ total_bp <- function(bed) {
 early_recovered_bp <- total_bp(early_recover_BED)
 late_recovered_bp  <- total_bp(late_recover_BED)
 unrecovered_bp     <- total_bp(unrecovered_BED)
+#################################################
+### determining genes that experience recovery
 
+#subsetting early and late recovered genes
+genes_early = subset(H3K27me3_Results_K27promTSSext_vInput, (H3K27me3_Results_K27promTSSext_vInput$logFC_qa_4hr > 1 | H3K27me3_Results_K27promTSSext_vInput$logFC_qa_0hr > 1) & H3K27me3_Results_K27promTSSext_vInput$FDR_qa_4hr < 0.05)
+
+genes_late = H3K27me3_Results_K27promTSSext_vInput %>%
+  filter(if_any(all_of(c(18, 21, 24)), ~ coalesce(.x > 1, FALSE)))
+genes_late = subset(genes_late, (genes_late$FDR_qa_24hr < 0.05 | genes_late$FDR_qa_12hr < 0.05 | genes_late$FDR_qa_8hr < 0.05) & ! genes_late$gene_id %in% genes_early$gene_id) 
+
+#Making files for bed output
+genes_early_BED = subset(regions$K27genes, regions$K27genes$gene_id %in% genes_early$gene_id)
+genes_late_BED = subset(regions$K27genes, regions$K27genes$gene_id %in% genes_late$gene_id)
+genes_unrecovered = subset(regions$K27genes, ! regions$K27genes$gene_id %in% genes_early$gene_id & ! regions$K27genes$gene_id %in% genes_late$gene_id)
+
+#write beds
+write.table(genes_early_BED, file = "early_recovered_genes.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+write.table(genes_late_BED, file = "late_recovered_genes.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+write.table(genes_unrecovered, file = "unrecovered_genes.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+
+##################################################
+###I want to know what genes are located within ectopic peaks
+
+#First, determine ectopic peaks that are significantly enriched
+ectopic_sig = subset(H3K27me3_Results_K27peaks_ectopic_vWT_0hr, H3K27me3_Results_K27peaks_ectopic_vWT_0hr$logFC_qa_24hr > 1 & H3K27me3_Results_K27peaks_ectopic_vWT_0hr$FDR_qa_24hr < 0.05 & H3K27me3_Results_K27peaks_ectopic_vInput$logFC_WT_24hr < 1 & H3K27me3_Results_K27peaks_ectopic_vInput$logFC_WT_0hr < 1 )
+
+#now subsetting genes
+library(data.table)
+
+# --- 1) Start from your data.frames ---
+g <- as.data.table(regions$allgenes_promTSSext)   # genes (keep all original cols)
+p <- as.data.table(ectopic_sig)                   # peaks
+
+# --- 2) Add join columns required by foverlaps (start/end) WITHOUT clobbering originals
+# If your V2/V3 are BED 0-based, half-open [start, end), see BED NOTE below.
+g[, `:=`(start = V2, end = V3, row_id = .I)]      # row_id lets us restore original order
+p[, `:=`(start, end)]
+
+# Keep only needed join cols from peaks (chrom, start, end)
+p <- p[, .(seqnames, start, end)]
+
+# --- 3) Keys and overlap join (genes as x, peaks as y) ---
+setkey(g, V1, start, end)
+setkey(p, seqnames, start, end)
+
+ov <- foverlaps(g, p, nomatch = 0L)  # returns genes+peaks columns for overlapping rows
+
+# --- 4) Keep the exact, original genes rows that had ≥1 overlap ---
+keep_ids <- unique(ov$row_id)
+genes_overlapping <- g[keep_ids]               # preserves all original columns
+
+# Optional: restore original row order and drop helper cols
+setorder(genes_overlapping, row_id)
+genes_overlapping[, `:=`(row_id = NULL, start = NULL, end = NULL)]
+
+#Write bed file
+write.table(genes_overlapping, file = "ectopic_qa_genes.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 
 ```
